.blackbox/tmp/shell_tool_e7bc60d98f99.log
/Users/guillaume_deramchi/Documents/hack-the-gap/mobile-app/backend/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
scripts/fetch-real-photos-concurrent.ts(71,52): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
scripts/fetch-real-photos-concurrent.ts(92,17): error TS1127: Invalid character.
scripts/fetch-real-photos-concurrent.ts(176,1): error TS1160: Unterminated template literal.

    at createTSError (/Users/guillaume_deramchi/Documents/hack-the-gap/mobile-app/backend/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/guillaume_deramchi/Documents/hack-the-gap/mobile-app/backend/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/guillaume_deramchi/Documents/hack-the-gap/mobile-app/backend/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/guillaume_deramchi/Documents/hack-the-gap/mobile-app/backend/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/guillaume_deramchi/Documents/hack-the-gap/mobile-app/backend/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
    at Object.require.extensions.<computed> [as .ts] (/Users/guillaume_deramchi/Documents/hack-the-gap/mobile-app/backend/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1203:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1019:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12) {
  diagnosticCodes: [ 2366, 1127, 1160 ]
}
